working on CORS Issue.

--- a/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
+++ b/src/app/modules/publishers/manage-publisher/manage-publisher.component.html
@@ -5,11 +5,9 @@
     <div class="content-header row">
     </div>
     <div class="content-body">
-      <!-- users edit start -->
+      <form [formGroup]="publisherForm">
       <section class="users-edit">
         <div class="row">
-          <!-- Back Button Row -->
-
           <div class="col-12">
             <div class="card">
               <div class="card-header c-title-header">
@@ -28,16 +26,10 @@
             </div>
           </div>
 
-          <!-- END Back Button Row -->
-
-          <!-- Publisher Information Start -->
-
           <div class="col-12">
             <div class="card">
               <div class="card-content">
                 <div class="card-body">
-                  <!-- users edit media object start -->
-                  <form [formGroup]="publisherForm">
                   <div class="row">
                     <div class="col-12">
                       <h4 class="mb-2 mt-1"><i class="fas fa-user mr-25"></i>Publisher Information</h4>
@@ -62,9 +54,6 @@
                       </div>
                     </div>
                   </div>
-                  <!-- users edit media object ends -->
-                  <!-- users edit account form start -->
-
                     <div class="row">
                       <div class="col-12 col-sm-6">
                         <div class="form-group">
@@ -112,26 +101,15 @@
                         <div class="form-group">
                           <label>Registered Date</label>
                           <input class="form-control"  name="registeredDate" formControlName="registeredDate" (click)="d.toggle()" ngbDatepicker #d="ngbDatepicker">
-                          <!-- <input type="text"
-                          class="form-control"
-                          #dp="bsDatepicker"
-                          bsDatepicker formControlName="registeredDate"
-                          [bsValue]="bsValue" [bsConfig]="{ dateInputFormat: 'DD-MM-YYYY',containerClass: 'theme-dark-blue'  }"> -->
-                          <!-- <input type="text" class="form-control birthdate-picker" value="DD/MM/YYYY" placeholder="DD/MM/YYYY"> -->
                         </div>
                       </div>
 
                     </div>
-                  </form>
-                  <!-- users edit account form ends -->
+                
                 </div>
               </div>
             </div>
           </div>
-
-          <!-- Publisher Information END -->
-
-          <!-- sgRecast Credentials Start -->
           <div class="col-12">
             <div class="card">
               <div class="card-content">
@@ -141,8 +119,7 @@
                       <h4 class="mb-2 mt-1"><i class="fal fa-key"></i> sgRecast Credentials</h4>
                     </div>
                   </div>
-                  <!-- users edit account form start -->
-                  <form [formGroup]="sgrecastForm">
+              
                     <div class="row">
                       <div class="col-12 col-sm-6">
                         <div class="form-group">
@@ -150,8 +127,8 @@
                             <label>sgBaseURL</label>
                             <input type="text" formControlName="sgBaseUrl" class="form-control" placeholder="sgBaseURL">
                             <div class="text-danger">
-                              <div *ngIf="(submitted || sgrecastForm.get('sgBaseUrl').touched) && sgrecastForm.controls['sgBaseUrl'].hasError('required')">sgBaseURL Required</div>
-                              <div *ngIf="p?.sgBaseUrl?.errors?.pattern">Please Enter Valid Url</div>
+                              <div *ngIf="(submitted || publisherForm.get('sgBaseUrl').touched) && publisherForm.controls['sgBaseUrl'].hasError('required')">sgBaseURL Required</div>
+                              <div *ngIf="f?.sgBaseUrl?.errors?.pattern">Please Enter Valid Url</div>
                             </div>
 
                           </div>
@@ -160,7 +137,7 @@
                           <div class="controls">
                             <label>sgUsername</label>
                             <input type="text" formControlName="sgUsername" class="form-control" placeholder="sgUsername">
-                            <div class="text-danger" *ngIf="(submitted || sgrecastForm.get('sgUsername').touched) && sgrecastForm.controls['sgUsername'].hasError('required')">sgUsername Required</div>
+                            <div class="text-danger" *ngIf="(submitted || publisherForm.get('sgUsername').touched) && publisherForm.controls['sgUsername'].hasError('required')">sgUsername Required</div>
 
                           </div>
                         </div>
@@ -168,14 +145,14 @@
                           <div class="controls">
                             <label>sgClienSecret</label>
                             <input type="text" formControlName="sgClientSecret" class="form-control" placeholder="sgClienSecret">
-                            <div class="text-danger" *ngIf="(submitted || sgrecastForm.get('sgClientSecret').touched) && sgrecastForm.controls['sgClientSecret'].hasError('required')">sgClienSecret required</div>
+                            <div class="text-danger" *ngIf="(submitted || publisherForm.get('sgClientSecret').touched) && publisherForm.controls['sgClientSecret'].hasError('required')">sgClienSecret required</div>
                           </div>
                         </div>
                         <div class="form-group">
                           <div class="controls">
                             <label>sgGrantType</label>
                             <input type="text" formControlName="sgGrantType" class="form-control" placeholder="sgGrantType">
-                            <div class="text-danger" *ngIf="(submitted || sgrecastForm.get('sgGrantType').touched) && sgrecastForm.controls['sgGrantType'].hasError('required')">sgGrantType required</div>
+                            <div class="text-danger" *ngIf="(submitted || publisherForm.get('sgGrantType').touched) && publisherForm.controls['sgGrantType'].hasError('required')">sgGrantType required</div>
                           </div>
                         </div>
                       </div>
@@ -184,21 +161,21 @@
                           <div class="controls">
                             <label>sgClientId</label>
                             <input type="text" formControlName="sgClientId" class="form-control" placeholder="sgClientId">
-                            <div class="text-danger" *ngIf="(submitted || sgrecastForm.get('sgClientId').touched) && sgrecastForm.controls['sgClientId'].hasError('required')">sgClientId required</div>
+                            <div class="text-danger" *ngIf="(submitted || publisherForm.get('sgClientId').touched) && publisherForm.controls['sgClientId'].hasError('required')">sgClientId required</div>
                           </div>
                         </div>
                         <div class="form-group">
                           <div class="controls">
                             <label>sgScope</label>
                             <input type="text" class="form-control" formControlName="sgScope" placeholder="sgScope">
-                            <div class="text-danger" *ngIf="(submitted || sgrecastForm.get('sgScope').touched) && sgrecastForm.controls['sgScope'].hasError('required')">sgScope required</div>
+                            <div class="text-danger" *ngIf="(submitted || publisherForm.get('sgScope').touched) && publisherForm.controls['sgScope'].hasError('required')">sgScope required</div>
                           </div>
                         </div>
                         <div class="form-group">
                           <div class="controls">
                             <label>sgPassword</label>
                             <input type="text" class="form-control" formControlName="password" placeholder="sgPassword">
-                            <div class="text-danger" *ngIf="(submitted || sgrecastForm.get('password').touched) && sgrecastForm.controls['password'].hasError('required')">sgPassword required</div>
+                            <div class="text-danger" *ngIf="(submitted || publisherForm.get('password').touched) && publisherForm.controls['password'].hasError('required')">sgPassword required</div>
 
                           </div>
                         </div>
@@ -206,21 +183,16 @@
                           <div class="controls">
                             <label>sgTokenType	</label>
                             <input type="text" formControlName="sgTokenType" class="form-control" placeholder="sgTokenType">
-                            <div class="text-danger" *ngIf="(submitted || sgrecastForm.get('sgTokenType').touched) && sgrecastForm.controls['sgTokenType'].hasError('required')">sgTokenType required</div>
-                            <div class="text-danger" *ngIf="(submitted || sgrecastForm.get('sgTokenType').touched) && sgrecastForm.controls['sgTokenType'].hasError('email')">Please Enter Valid Email</div>
+                            <div class="text-danger" *ngIf="(submitted || publisherForm.get('sgTokenType').touched) && publisherForm.controls['sgTokenType'].hasError('required')">sgTokenType required</div>
+                            <div class="text-danger" *ngIf="(submitted || publisherForm.get('sgTokenType').touched) && publisherForm.controls['sgTokenType'].hasError('email')">Please Enter Valid Email</div>
                           </div>
                         </div>
                       </div>
                     </div>
-                  </form>
-                  <!-- users edit account form ends -->
                 </div>
               </div>
             </div>
           </div>
-          <!-- sgRecast Credentials END -->
-
-          <!-- Theme Information Start -->
           <div class="col-12 col-md-6">
             <div class="card">
               <div class="card-content" style="height: 200px;">
@@ -230,39 +202,24 @@
                       <h4 style="color:'2C2C2C'" class="mb-2 mt-1"><i class="fa fa-moon-o" aria-hidden="true"></i>Theme Info</h4>
                     </div>
                   </div>
-                  <!-- users edit account form start -->
-                  <form [formGroup]="themeForm">
                     <div class="row">
                       <div class="col-12 col-sm-6">
                         <div class="form-group">
                           <div class="controls">
                             <label>Primary Color</label>
                             <input type="text" [style.background]="color" formControlName="headerColor"  [(colorPicker)]="color" (colorPickerOpen)="onEventLog('colorPickerOpen', $event)" [value]="color" (colorPickerClose)="onEventLog('colorPickerClose', $event)" (cpInputChange)="onEventLog('cpInputChange', $event)" (cpSliderDragStart)="onEventLog('cpSliderDragStart', $event)" class="form-control" (cpSliderDragEnd)="onEventLog('cpSliderDragEnd', $event)"/>
-                            <div class="text-danger" *ngIf="(submitted || themeForm.get('headerColor').touched) && themeForm.controls['headerColor'].hasError('required')">Primary color Required</div>
+                            <div class="text-danger" *ngIf="(submitted || publisherForm.get('headerColor').touched) && publisherForm.controls['headerColor'].hasError('required')">Primary color Required</div>
 
                             <!-- <div class="text-danger" *ngIf="t?.headerColor?.errors?.required">Header Color Code Required</div> -->
                           </div>
                         </div>
                       </div>
-                      <!-- <div class="col-12 col-sm-6">
-                        <div class="form-group">
-                          <div class="controls">
-                            <label>Footer</label>
-                            <input type="text" class="form-control" formControlName="footer" placeholder="Enter Color Code">
-                            <div class="text-danger" *ngIf="(submitted || themeForm.get('footer').touched) && themeForm.controls['footer'].hasError('required')">Footer Color Code required</div>
-                          </div>
-                        </div>
-                      </div> -->
                     </div>
-                  </form>
                   <!-- users edit account form ends -->
                 </div>
               </div>
             </div>
           </div>
-          <!-- sgRecast Credentials END -->
-
-          <!-- Theme Information Start -->
           <div class="col-12 col-md-6">
             <div class="card">
               <div class="card-content" style="height: 200px;">
@@ -272,8 +229,6 @@
                       <h4 class="mb-2 mt-1"><i class="fal fa-code"></i> Ad Manager Header Script Tag</h4>
                     </div>
                   </div>
-                  <!-- users edit account form start -->
-                  <form [formGroup]="manageheaderForm"  >
                     <div class="row">
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
@@ -284,15 +239,10 @@
                         </div>
                       </div>
                     </div>
-                  </form>
-                  <!-- users edit account form ends -->
                 </div>
               </div>
             </div>
           </div>
-          <!-- sgRecast Credentials END -->
-
-          <!-- Sidebar 1 Start -->
           <div class="col-12 col-md-3">
             <div class="card">
               <div class="card-content" style="height: 225px;">
@@ -302,8 +252,6 @@
                       <h4 class="mb-2 mt-1"><i class="fal fa-code"></i> Sidebar 1</h4>
                     </div>
                   </div>
-                  <!-- users edit account form start -->
-                  <form [formGroup]="sidebar1Form">
                     <div class="row">
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
@@ -314,15 +262,10 @@
                         </div>
                       </div>
                     </div>
-                  </form>
-                  <!-- users edit account form ends -->
                 </div>
               </div>
             </div>
           </div>
-          <!-- Sidebar 1 END -->
-
-          <!-- Sidebar 2 Start -->
           <div class="col-12 col-md-3">
             <div class="card">
               <div class="card-content" style="height: 225px;">
@@ -332,8 +275,6 @@
                       <h4 class="mb-2 mt-1"><i class="fal fa-code"></i> Sidebar 2</h4>
                     </div>
                   </div>
-                  <!-- users edit account form start -->
-                  <form [formGroup]="sidebar2Form">
                     <div class="row">
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
@@ -344,15 +285,10 @@
                         </div>
                       </div>
                     </div>
-                  </form>
-                  <!-- users edit account form ends -->
                 </div>
               </div>
             </div>
           </div>
-          <!-- Sidebar 2 END -->
-
-          <!-- Sidebar 3 Start -->
           <div class="col-12 col-md-3">
             <div class="card">
               <div class="card-content" style="height: 225px;">
@@ -362,8 +298,6 @@
                       <h4 class="mb-2 mt-1"><i class="fal fa-code"></i> Sidebar 3</h4>
                     </div>
                   </div>
-                  <!-- users edit account form start -->
-                  <form [formGroup]="sidebar3Form">
                     <div class="row">
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
@@ -374,15 +308,10 @@
                         </div>
                       </div>
                     </div>
-                  </form>
-                  <!-- users edit account form ends -->
                 </div>
               </div>
             </div>
           </div>
-          <!-- Sidebar 3 END -->
-
-          <!-- Sidebar 4 Start -->
           <div class="col-12 col-md-3">
             <div class="card">
               <div class="card-content" style="height: 225px;">
@@ -392,8 +321,6 @@
                       <h4 class="mb-2 mt-1"><i class="fal fa-code"></i> Sidebar 4</h4>
                     </div>
                   </div>
-                  <!-- users edit account form start -->
-                  <form [formGroup]="sidebar4Form">
                     <div class="row">
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
@@ -404,15 +331,10 @@
                         </div>
                       </div>
                     </div>
-                  </form>
-                  <!-- users edit account form ends -->
                 </div>
               </div>
             </div>
           </div>
-          <!-- Sidebar 4 END -->
-
-          <!-- Leaderboard 1 Start -->
           <div class="col-12 col-md-12">
             <div class="card">
               <div class="card-content" style="height: 200px;">
@@ -422,8 +344,6 @@
                       <h4 class="mb-2 mt-1"><i class="fal fa-code"></i> Leaderboard 1</h4>
                     </div>
                   </div>
-                  <!-- users edit account form start -->
-                  <form [formGroup]="leaderboardForm" >
                     <div class="row">
                       <div class="col-12 col-sm-12">
                         <div class="form-group">
@@ -434,8 +354,6 @@
                         </div>
                       </div>
                     </div>
-                  </form>
-                  <!-- users edit account form ends -->
                   <div class="alert alert-danger mt-2 col-md-12" *ngIf="errorMessage" role="alert">
                     {{errorMessage}}
                   </div>
@@ -449,21 +367,17 @@
               </div>
             </div>
           </div>
-          <!-- Leaderboard 1 END -->
         </div>
-
         <div class="col-12 d-flex flex-sm-row flex-column justify-content-end mt-1">
-          <button *ngIf="this.submitted === true" type="submit" [disabled]="!publisherForm.valid || !sgrecastForm.valid || !themeForm.valid" [ngClass]="{'disable':!publisherForm.valid || !sgrecastForm.valid || !themeForm.valid}" class="btn btn-primary glow mb-1 mb-sm-0 mr-0 mr-sm-1 waves-effect waves-light">
+          <button *ngIf="this.submitted === true" type="submit" [disabled]="!publisherForm.valid" [ngClass]="{'disable':!publisherForm.valid }" class="btn btn-primary glow mb-1 mb-sm-0 mr-0 mr-sm-1 waves-effect waves-light">
             <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span> loading...
           </button>
-          <button *ngIf="this.submitted === false" [ngClass]="{'disable':!publisherForm.valid || !sgrecastForm.valid || !themeForm.valid}"  [disabled]="!publisherForm.valid || !sgrecastForm.valid || !themeForm.valid" (click)="onSubmit()"  type="submit" class="btn btn-primary glow mb-1 mb-sm-0 mr-0 mr-sm-1 waves-effect waves-light">Save
+          <button *ngIf="this.submitted === false" [ngClass]="{'disable':!publisherForm.valid}"  [disabled]="!publisherForm.valid" (click)="onSubmit()"  type="submit" class="btn btn-primary glow mb-1 mb-sm-0 mr-0 mr-sm-1 waves-effect waves-light">Save
             Changes</button>
           <button type="reset" (click)="reset()" class="btn btn-outline-warning waves-effect waves-light">Reset</button>
         </div>
-
       </section>
-      <!-- users edit ends -->
-
+    </form>
     </div>
   </div>
 </div>
