--- a/src/app/layouts/default/default.component.html
+++ b/src/app/layouts/default/default.component.html
@@ -34,7 +34,7 @@
 </nav>
 
 <!-- BEGIN: Main Menu-->
-<div class="main-menu menu-fixed menu-light menu-accordion menu-shadow" data-scroll-to-active="true">
+<!-- <div class="main-menu menu-fixed menu-light menu-accordion menu-shadow" data-scroll-to-active="true">
   <div class="navbar-header">
     <ul class="nav navbar-nav flex-row">
       <li class="nav-item mr-auto">
@@ -57,7 +57,7 @@
       </li>
     </ul>
   </div>
-</div>
+</div> -->
 <!-- END: Main Menu-->
 
 <router-outlet></router-outlet>
